# Atom

./: .gitignore  Cargo.toml
atom_macros/: Cargo.toml
atom_macros/src/: lib.rs
src/: app.rs  lib.rs  main.rs
src/editor/: command.rs  mod.rs
src/graphics/: camera.rs  error.rs  light.rs  material.rs  mesh.rs  mod.rs  primitives.rs  rendering.rs  scene.rs  vertex.rs
src/graphics/backend/: error.rs  mod.rs  render_backend.rs  vulkan_backend.rs
src/graphics/shaders/: fragment.glsl  triangle.frag  triangle.vert  vertex.glsl
src/math/: matrix.rs  vector.rs
src/reader/: error.rs  file_type.rs  mod.rs  obj_reader.rs
