[package]
name = "atom"
version = "0.1.0"
edition = "2024"



[dependencies]
syn = "2.0.102"
thiserror = "2"
quote = "1.0"
winit = "0.30.11"
vulkano = "0.35.0" 
vulkano-shaders = "0.35.0"
bytemuck = "1.23.1"
atom_macros = { path = "atom_macros" }
glam = { version = "0.30.4", features = ["bytemuck"] }
egui_winit_vulkano = "0.28.0"
